--- a/scripts/crt_master_table.ipynb
+++ b/scripts/crt_master_table.ipynb
@@ -74,7 +74,12 @@
    "cell_type": "code",
    "execution_count": 47,
    "id": "f5e0ebdd",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -134,27 +139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "cd756ab5",
+   "execution_count": null,
+   "id": "c4f4c2a3-e810-4b6f-939d-2a4929687b99",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading CSV file: /home/deathrok-xz70/Desktop/mariadb_test/healthcare_simulation/scripts/test_data.csv\n",
-      "Found 1000000 records\n",
-      "CSV columns: ['patient_first_name', 'patient_last_name', 'patient_dob', 'patient_ssn', 'patient_phone', 'patient_email', 'patient_credit_card', 'patient_credit_card_expiry', 'patient_credit_card_cvv', 'insurance_provider', 'insurance_id', 'age', 'admission_date', 'release_date', 'primary_diagnosis', 'icd_10_code', 'diagnosis_category', 'attending_physician', 'died', 'cause_of_death', 'death_date', 'hospital_name', 'transferred', 'transfer_hospitals', 'transfer_date', 'follow_up_appointment', 'follow_up_doctor', 'total_cost', 'insurance_coverage', 'out_of_pocket', 'patient_id', 'encounter_id']\n",
-      "Loading 32 columns: ['patient_first_name', 'patient_last_name', 'patient_dob', 'patient_ssn', 'patient_phone', 'patient_email', 'patient_credit_card', 'patient_credit_card_expiry', 'patient_credit_card_cvv', 'insurance_provider', 'insurance_id', 'age', 'admission_date', 'release_date', 'primary_diagnosis', 'icd_10_code', 'diagnosis_category', 'attending_physician', 'died', 'cause_of_death', 'death_date', 'hospital_name', 'transferred', 'transfer_hospitals', 'transfer_date', 'follow_up_appointment', 'follow_up_doctor', 'total_cost', 'insurance_coverage', 'out_of_pocket', 'patient_id', 'encounter_id']\n",
-      "Successfully loaded 1000000 records using COPY\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def load_data():\n",
     "    try:\n",
     "        cur = conn.cursor()\n",
-    "        file_path = '/home/deathrok-xz70/Desktop/mariadb_test/healthcare_simulation/scripts/test_data.csv'\n",
+    "        file_path = '/test_data.csv'\n",
     "        # Read CSV file\n",
     "        print(f\"Reading CSV file: {file_path}\")\n",
     "        df = pd.read_csv(file_path)\n",
@@ -176,7 +169,7 @@
     "            output,\n",
     "            'master_data',\n",
     "            sep=',',\n",
-    "            null='',  # Empty strings will be treated as NULL\n",
+    "            null='',\n",
     "            columns=csv_columns\n",
     "        )\n",
     "        conn.commit()\n",
@@ -186,17 +179,9 @@
     "        print(f\"Error loading data: {e}\")\n",
     "        conn.rollback()\n",
     "        import traceback\n",
-    "        traceback.print_exc()  # This will show the full error traceback\n",
+    "        traceback.print_exc()\n",
     "load_data()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20dd3741",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
